--- a/style/overlay.css
+++ b/style/overlay.css
@@ -2,6 +2,7 @@
 #advanced-settings-view,
 #modify-account-view {
   z-index: -1;
+  visibility: hidden;
 }
 
 body[data-path="/select-preset/"] #create-account-view,
@@ -9,4 +10,5 @@ body[data-path="/advanced-settings/"] #advanced-settings-view,
 body[data-path^="/create-account/"] #modify-account-view,
 body[data-path^="/update-account/"] #modify-account-view {
   z-index: 1200;
+  visibility: visible;
 }
