--- a/style/month.css
+++ b/style/month.css
@@ -6,7 +6,7 @@
   height: auto;
 }
 
-#time-views #months-day-view {
+#time-views #month-day-agenda {
   background-color: #F8F8F8;
   flex: 1;
 }
@@ -147,10 +147,10 @@ section.month .icon-calendar-dot:before {
   margin-left: calc(50% - 1.8rem);
 }
 
-/* months-day-view
+/* month-day-agenda
  * =============== */
 
-#months-day-view {
+#month-day-agenda {
   margin-bottom: 4.5rem;
   overflow-x: hidden;
   overflow-y: auto;
@@ -184,7 +184,7 @@ section.month .icon-calendar-dot:before {
   width: 100%;
 }
 
-#months-day-view .event {
+#month-day-agenda .event {
   display: block;
   height: 6rem;
   margin: 0;
@@ -192,27 +192,27 @@ section.month .icon-calendar-dot:before {
   padding: 0 1.5rem;
 }
 
-#months-day-view .event:active,
-#months-day-view .event:focus {
+#month-day-agenda .event:active,
+#month-day-agenda .event:focus {
   outline: none;
 }
 
-#months-day-view .container {
+#month-day-agenda .container {
   height: 100%;
   padding: 0 1.5rem;
   border-bottom: 0.1rem solid #E5E5E5;
 }
 
 /* The last month day event doesn't need a bottom border. */
-#months-day-view .event:last-child > .container {
+#month-day-agenda .event:last-child > .container {
   border-bottom: none;
 }
 
-#months-day-view .container.has-alarm {
+#month-day-agenda .container.has-alarm {
   padding-right: 3rem;
 }
 
-#months-day-view .icon-calendar-alarm {
+#month-day-agenda .icon-calendar-alarm {
   position: absolute;
   top: 0.2rem;
   right: 0;
@@ -220,7 +220,7 @@ section.month .icon-calendar-dot:before {
   height: 3rem;
 }
 
-#months-day-view .event-title {
+#month-day-agenda .event-title {
   min-height: 1.5rem;
   font-size: 1.4rem;
   font-weight: 500;
@@ -231,7 +231,7 @@ section.month .icon-calendar-dot:before {
   color: #333;
 }
 
-#months-day-view .event-location {
+#month-day-agenda .event-location {
   display: block;
   top: 2.8rem;
   min-height: 2.1rem;
@@ -244,7 +244,7 @@ section.month .icon-calendar-dot:before {
   font-weight: 400;
 }
 
-#months-day-view .icon-calendar-dot {
+#month-day-agenda .icon-calendar-dot {
   position: absolute;
   height: 3rem;
   left: -1.4rem;
@@ -252,11 +252,11 @@ section.month .icon-calendar-dot:before {
   margin-top: -3rem;
 }
 
-#months-day-view .icon-calendar-dot:before {
+#month-day-agenda .icon-calendar-dot:before {
   font-size: 6rem;
 }
 
-#months-day-view .event-time {
+#month-day-agenda .event-time {
   color: #657073;
   display: flex;
   flex-direction: column;
@@ -266,19 +266,19 @@ section.month .icon-calendar-dot:before {
   justify-content: center;
 }
 
-#months-day-view .event-time .all-day {
+#month-day-agenda .event-time .all-day {
   white-space: normal;
   line-height: 1.4;
   width: 7rem;
 }
 
-#months-day-view .start-time,
-#months-day-view .end-time {
+#month-day-agenda .start-time,
+#month-day-agenda .end-time {
   height: 2.5rem;
   line-height: 2.5rem;
 }
 
-#months-day-view .event-details {
+#month-day-agenda .event-details {
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -290,7 +290,7 @@ section.month .icon-calendar-dot:before {
   width: 17rem;
 }
 
-#months-day-view .event-details > h5 {
+#month-day-agenda .event-details > h5 {
   color: #252525;
   font-size: 1.9rem;
   font-weight: normal;
@@ -302,7 +302,7 @@ section.month .icon-calendar-dot:before {
   width: 100%;
 }
 
-#months-day-view .details {
+#month-day-agenda .details {
   display: block;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -310,7 +310,7 @@ section.month .icon-calendar-dot:before {
   width: 100%;
 }
 
-#months-day-view .location {
+#month-day-agenda .location {
   color: #A2A2A2;
   font-size: 1.4rem;
   height: 2.5rem;
@@ -318,11 +318,11 @@ section.month .icon-calendar-dot:before {
   width: 100%;
 }
 
-#months-day-view .icon-calendar-alarm {
+#month-day-agenda .icon-calendar-alarm {
   display: none;
 }
 
-#months-day-view .has-alarms .icon-calendar-alarm {
+#month-day-agenda .has-alarms .icon-calendar-alarm {
   display: block;
   height: 6rem;
   line-height: 6rem;
