--- a/style/forms.css
+++ b/style/forms.css
@@ -46,4 +46,6 @@ form li {
   position: absolute;
   /* visibility: hidden; will avoid events to reach the <input> */
   opacity: 0;
+  /* input should not be selectable otherwise it might affect the layout */
+  -moz-user-select: none;
 }
