--- a/style/navigation.css
+++ b/style/navigation.css
@@ -1,7 +1,7 @@
 *.focus,
  .hasfocused {
-  background-color: #0c99d5 !important;
+  background-color: var(--highlight-color) !important;
 }
 *.focus1 {
-  background-color: #0c99d5 !important;
+  background-color: var(--highlight-color) !important;
 }
