CORE-2210: The Settings UI is not displayed as UX spec defines. r=jianmin

--- a/style/ui.css
+++ b/style/ui.css
@@ -180,7 +180,7 @@ body[data-path="/day/"] #view-selector > .day > a:active {
 }
 
 #advanced-settings-view section.content {
-  background-color: var(--color-gs90) !important;
+  background-color: var(--background);
   top: 6.2rem;
   height: calc(100% - 6.2rem);
   overflow-y: scroll;
