--- a/style/events_list.css
+++ b/style/events_list.css
@@ -127,3 +127,17 @@
   white-space: nowrap;
   width: 100%;
 }
+
+#events-list-option-menu {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  z-index: 1000;
+}
+
+#events-list-dialog {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  z-index: 1000;
+}
