CORE-2184: Add soft keys in event detail page. r=jianmin

--- a/style/event_detail.css
+++ b/style/event_detail.css
@@ -91,3 +91,10 @@ li.current-calendar div.indicator{
   top: 50%;
   color: var(--color-gs00);
 }
+
+#event-detail-dialog {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  z-index: 1000;
+}
