CORE-2376: Event-list background-color changed, time format changed. r=jianmin

--- a/style/ui.css
+++ b/style/ui.css
@@ -347,3 +347,7 @@ html[dir="rtl"] #advanced-settings-view .account-list .error a {
   font-size: 2.1rem;
   font-weight: 400;
 }
+
+#events-list-view {
+  background-color: var(--background);
+}
