--- a/style/event_detail.css
+++ b/style/event_detail.css
@@ -1,3 +1,8 @@
+#event-detail-view div.content {
+  height: calc(100% - 6.2rem);
+  overflow-y: auto;
+}
+
 #event-detail {
   background-color: var(--background);
 }
@@ -13,6 +18,17 @@
 .event-detail-label {
   float: left;
   color: var(--highlight-color);
+}
+
+div#event-detail-duration-time {
+  top: 20%;
+  line-height: 2.1rem;
+  font-size: 2.1rem;
+}
+
+div#event-detail-duration-time span {
+  font-size: 1.6rem;
+  color: var(--color-gs65);
 }
 
 .event-detail-location-div {
@@ -47,7 +63,16 @@
 li.current-calendar div.indicator{
   float: left;
   height: 8.2rem;
-  background-color: red;
+  background-color: #00d7bb;
+  width: 0.4rem;
+}
+
+#event-detail-view li.current-calendar {
+  padding: 0;
+}
+
+#event-detail-view li.alarms {
+  padding-left: 1.4rem;
 }
 
 .event-detail-current-calendar-div {
@@ -58,7 +83,7 @@ li.current-calendar div.indicator{
 
 .event-detail-current-calendar-div-top {
   position: absolute;
-  top: 10%;
+  top: 25%;
   color: var(--color-gs65);
 }
 
