ORE-2574: Div width was adjusted to show all elements. r=jianmin

--- a/style/events_list.css
+++ b/style/events_list.css
@@ -100,8 +100,7 @@ div#events-list-agenda::after {
 
 #events-list-agenda .event-time .all-day {
   white-space: normal;
-  line-height: 3;
-  width: 7rem;
+  line-height: 3rem;
 }
 
 #events-list-agenda .start-time,
