CORE-2208: add page calendar_to_display and related function. r=jianmin-zhou

--- a/style/lazy_loaded.css
+++ b/style/lazy_loaded.css
@@ -17,3 +17,4 @@
 @import url("settings.css");
 @import url("event_detail.css");
 @import url("setup-calendars.css");
+@import url("calendar_chooser.css");
