--- a/style/lazy_loaded.css
+++ b/style/lazy_loaded.css
@@ -16,5 +16,5 @@
 @import url("overlay.css");
 @import url("settings.css");
 @import url("event_detail.css");
-@import url("setup-calendars.css");
+@import url("setup_calendars.css");
 @import url("calendar_chooser.css");
