--- a/style/setup_calendars.css
+++ b/style/setup_calendars.css
@@ -1,45 +1,37 @@
-.setup-calendar-section {
+#setup-calendar-view {
   background-color: var(--color-gs90);
   height: 100%;
 }
 
-div.setup-div::after {
+#setup-calendar-viewdiv .setup-div::after {
   border: none;
 }
 
-li.setup-li {
+#setup-calendar-view li.setup-li {
   min-height: 0;
 }
 
-#setup-calendar {
-  background-color: var(--color-gs90);
-  height: 100%;
-}
-
-.setup-ul {
-}
-
-ul.setup-ul li {
+#setup-calendar-view ul.setup-ul li {
   padding: 0;
 }
 
-div.on-off-line-calendar {
+#setup-calendar-view div.on-off-line-calendar {
   height: 8.2rem;
 }
 
-div.indicator {
+#setup-calendar-view div.indicator {
   float: left;
   width: 0.4rem;
   height: 8.2rem;
   background-color: red;
 }
 
-div.setup-calendar-id {
+#setup-calendar-view div.setup-calendar-id {
   float:left;
   width:auto;
 }
 
-p.setup-calendar-p {
+#setup-calendar-view p.setup-calendar-p {
   font-size: 2.1rem;
   position: absolute;
   left: 15%;
