--- a/style/setup_calendars.css
+++ b/style/setup_calendars.css
@@ -39,3 +39,8 @@
   transform: translate(-50%,-50%);
   color: var(--color-gs00);
 }
+
+#setup-calendar-view .h5-dialog-container h5-dialog .dialog-input-container input {
+  font-size: 2.1rem;
+  height: 4.2rem;
+}
