--- a/style/setup_calendars.css
+++ b/style/setup_calendars.css
@@ -40,6 +40,14 @@
   color: var(--color-gs00);
 }
 
+#setup-calendar-view .h5-dialog-container {
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  position: absolute;
+  z-index: 1000;
+}
+
 #setup-calendar-view .h5-dialog-container h5-dialog .dialog-input-container input {
   font-size: 2.1rem;
   height: 4.2rem;
