--- a/style/setup_calendars.css
+++ b/style/setup_calendars.css
@@ -52,3 +52,8 @@
   font-size: 2.1rem;
   height: 4.2rem;
 }
+
+#setup-calendar-view .setup-calendar-container {
+  height: calc(100% - 6.2rem);
+  overflow-y: scroll;
+}
