CORE-2632: section's height, filedset's margin adjusted in modify-account page. r=jianmin

--- a/style/modify_account_view.css
+++ b/style/modify_account_view.css
@@ -139,3 +139,11 @@
   z-index: 1000;
 }
 
+#modify-account-view {
+  height: 100%;
+  background-color: var(--background);
+}
+
+#modify-account-view fieldset{
+  margin: 0;
+}
