--- a/style/setup_calendars.css
+++ b/style/setup_calendars.css
@@ -33,11 +33,12 @@
 
 #setup-calendar-view p.setup-calendar-p {
   font-size: 2.1rem;
-  position: absolute;
-  left: 15%;
-  top: 50%;
-  transform: translate(-50%,-50%);
   color: var(--color-gs00);
+  line-height: 4.1rem;
+  margin-left: 1.4rem;
+  text-overflow: ellipsis;
+  width: 27rem;
+  overflow: hidden;
 }
 
 #setup-calendar-view .h5-dialog-container {
