CORE-2384: Set background color to focused element while openning optionmenu in event-list-page. r=jianmin

--- a/style/events_list.css
+++ b/style/events_list.css
@@ -127,3 +127,8 @@ div#events-list-agenda::after {
   width: 100%;
   z-index: 1000;
 }
+
+#events-list li[cachefocus] {
+  background-color: var(--highlight-color) !important;
+  color: #fff !important;
+}
