CORE-2863: Add DialogController to manage dialogs and integrate it into event detail page. r=jianmin

--- a/style/ui.css
+++ b/style/ui.css
@@ -331,6 +331,14 @@ html[dir="rtl"] #advanced-settings-view .account-list .error a {
   z-index: 1000;
 }
 
+#calendar-dialog-wrapper {
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  position: absolute;
+  z-index: 1000;
+}
+
 #date-picker {
   position: absolute;
   bottom: 0px;
