CORE-2386: Prevent toggling back to non-all-day when saving a all-day-event and push a 'none' in event-detail. r=jianmin

--- a/style/event_detail.css
+++ b/style/event_detail.css
@@ -106,11 +106,14 @@ li.current-calendar div.indicator{
 }
 
 .event-detail-description-div-top {
-  padding-top: 1rem;
+  position: absolute;
+  top: 25%;
   color: var(--color-gs65);
 }
 
 .event-detail-description-div-bot {
+  position: absolute;
+  top: 50%;
   color: var(--color-gs00);
 }
 
