CORE-2325: show toast after add event succeccful. r=jianmin-zhou

--- a/style/ui.css
+++ b/style/ui.css
@@ -273,6 +273,7 @@ section[role="status"].active {
   animation-name: fade-status;
   animation-delay: 2.5s;
   animation-duration: 1.5s;
+  z-index: 1000;
 }
 
 /* Hide on initial render to prevent flashing */
