CORE-2402: show correct calendar list when update event. r=jianmin-zhou

--- a/style/modify_event_view.css
+++ b/style/modify_event_view.css
@@ -84,7 +84,7 @@
   display: none;
 }
 
-#modify-event-view.update .calendar-id {
+#modify-event-view.update .current-calendar {
   display: none;
 }
 
