--- a/style/event_detail.css
+++ b/style/event_detail.css
@@ -1,6 +1,11 @@
 #event-detail-view div.content {
   height: calc(100% - 6.2rem);
   overflow-y: auto;
+  color: var(--color-gs00);
+}
+
+#event-detail-view h5-header h1 {
+  text-overflow: ellipsis;
 }
 
 #event-detail {
@@ -20,6 +25,22 @@
   color: var(--highlight-color);
 }
 
+#event-detail-view div.location-label-container {
+  width: 3rem;
+  position: relative;
+}
+
+#event-detail-view div.location-label-container label {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#event-detail-view div.location-outer-container {
+  display: flex;
+}
+
 div#event-detail-duration-time {
   top: 20%;
   line-height: 2.1rem;
@@ -31,13 +52,13 @@ div#event-detail-duration-time span {
   color: var(--color-gs65);
 }
 
-.event-detail-location-div {
-  float: left;
-  height: 8.2rem;
-  position: absolute;
-  left: 15%;
-  top: 40%;
-  color: var(--color-gs00);
+#event-detail-view .event-detail-location-div {
+  word-break: break-all;
+  line-height: 2.1rem;
+  display: table;
+  min-height: 8.2rem;
+  padding-left: 1rem;
+  width: 25rem;
 }
 
 .event-detail-time-div {
@@ -106,23 +127,25 @@ li.current-calendar div.indicator{
 }
 
 .event-detail-description-div-top {
-  position: absolute;
-  top: 25%;
+  padding-top: 1rem;
   color: var(--color-gs65);
 }
 
 .event-detail-description-div-bot {
-  position: absolute;
-  top: 50%;
   color: var(--color-gs00);
 }
 
 #event-detail-view #event-detail-description {
   line-height: 2.1rem;
+  padding: 1rem 0px;
+  display: table;
+  width: 28rem;
+  word-break: break-all;
 }
 
 #event-detail-view li.description {
   padding-left: 1.4rem;
+  justify-content: unset;
 }
 
 #event-detail-view.invitation .detail-invitation-from,
