CORE-2665: Add a new page for account detail. r=jianmin

--- a/style/base.css
+++ b/style/base.css
@@ -12,3 +12,4 @@
 @import url("month.css");
 @import url("building_blocks.css");
 @import url("events_list.css");
+@import url("account_detail.css");
