--- a/style/events_list.css
+++ b/style/events_list.css
@@ -20,8 +20,8 @@ div#events-list-agenda::after {
 }
 
 #events-list-agenda .event {
-  display: block;
-  height: 8.2rem;
+  display: flex;
+  min-height: 8.2rem;
   position: relative;
   padding: 0;
   margin-left: -1rem;
@@ -71,19 +71,17 @@ div#events-list-agenda::after {
 }
 
 #events-list-agenda .indicator {
-  float: left;
   width: 0.4rem;
-  height: 100%;
+  min-height: 8.2rem;
 }
 
 #events-list-agenda .event-time {
   color: var(--color-gs65);
   display: flex;
   flex-direction: column;
-  float: left;
   padding-left: 1.2rem;
   font-size: 1.5rem;
-  height: 8.2rem;
+  min-height: 8.2rem;
   justify-content: center;
 }
 
@@ -99,26 +97,16 @@ div#events-list-agenda::after {
 }
 
 #events-list-agenda .event-details {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  height: 8.2rem;
-  justify-content: center;
-  top: 0;
-  width: 20.5rem;
-  padding-left: 1.2rem;
-}
-
-#events-list-agenda .event-details > h5 {
+  word-break: break-all;
+  line-height: 2.1rem;
+  width: 23rem;
+  font-size: 2.1rem;
+  min-height: 8.2rem;
   color: var(--color-gs00);
-  font-size: 2rem;
-  font-weight: normal;
-  height: 2.5rem;
-  line-height: 2.4rem;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 2rem 1rem;
 }
 
 #events-list li[cachefocus] {
