CORE-2833: Re-adjust UI in setup-calendar. r=jianmin

--- a/style/setup_calendars.css
+++ b/style/setup_calendars.css
@@ -39,4 +39,10 @@
   text-overflow: ellipsis;
   width: 27rem;
   overflow: hidden;
+  white-space: nowrap;
+}
+
+#setup-calendar-view .setup-calendar-container {
+  height: calc(100% - 6.2rem);
+  overflow-y: scroll;
 }
