CORE-2212: set the style of defaultCalendar selector as UX defines. r=jianmin-zhou

--- a/style/lazy_loaded.css
+++ b/style/lazy_loaded.css
@@ -18,3 +18,4 @@
 @import url("event_detail.css");
 @import url("setup_calendars.css");
 @import url("calendar_chooser.css");
+@import url("advanced_settings.css");
