CORE-3088: show the full content when the calendar name is too long. r=jianmin-zhou

--- a/style/advanced_settings.css
+++ b/style/advanced_settings.css
@@ -51,6 +51,9 @@
   display: block;
   font-size: 2.1rem;
   color: var(--highlight-color);
-  padding: 5px 0px 3px 0px;
+  padding: 5px 0px 3px 0px !important;
   border-bottom: 1px var(--secondary-info-color) solid;
+  white-space: normal;
+  word-wrap: break-word;
+  word-break: break-all;
 }
