CORE-3083: UI adjustments of account detail page. r=jianmin

--- a/style/account_detail.css
+++ b/style/account_detail.css
@@ -31,4 +31,10 @@
   text-overflow: ellipsis;
   width: 27rem;
   overflow: hidden;
+  white-space: nowrap;
+}
+
+#account-detail-view div.account-detail-container {
+  overflow-y: scroll;
+  height: calc(100% - 6.2rem);
 }
