--- a/style/calendar_chooser.css
+++ b/style/calendar_chooser.css
@@ -48,6 +48,15 @@
   height: 8.2rem;
 }
 
+#calendar-chooser-view ul li div.on-off-line-calendar label {
+  line-height: 2.1rem;
+  white-space: nowrap;
+  width: 21rem;
+  word-break: break-all;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 #calendar-chooser-view ul li div.indicator {
   float: left;
   width: 0.4rem;
