CORE-3023: Reimplement the oauth_window with window.open(). r=jianmin
Signed-off-by: Shawn Bow <zhen.bao@acadine.com>

--- a/style/modify_account_view.css
+++ b/style/modify_account_view.css
@@ -79,7 +79,10 @@
 }
 
 
-#modify-account-view.auth-oauth2.create .oauth2-sign-in,
+#modify-account-view.auth-oauth2.create .oauth2-sign-in {
+  display: none;
+}
+
 #modify-account-view.auth-oauth2.error .sync-errors,
 #modify-account-view.auth-oauth2.error .oauth2-sign-in {
   display: block;
