--- a/style/ui.css
+++ b/style/ui.css
@@ -210,7 +210,15 @@ body[data-path="/day/"] #view-selector > .day > a:active {
   position: absolute;
   top: 0;
   width: 100%;
-  height: 100%
+  height: 100%;
+}
+
+.option-menu-bg {
+  opacity: 0.3;
+}
+
+.cal-chooser-bg {
+  opacity: 0.3;
 }
 
 /* [BB][tabs]*/
